--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Elm Melody Maker</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.0/milligram.min.css">
     </head>
-    <body style="background-color: #ddd;">
+    <body style="background-color: #111;">
         <div id="main"></div>
         <script src="Main.js"></script>
         <script>
@@ -25,17 +25,25 @@
 
                 var osc = ctx.createOscillator();
                 var gainNode = ctx.createGain();
-                osc.connect(gainNode);
 
-                if (addDelay === false)   
+                if (addDelay === false) {
+                    osc.connect(gainNode);
                     gainNode.connect(ctx.destination);
+                }
 
                 else if (addDelay === true) {
                     var delay = ctx.createDelay();
-                    delay.delayTime.value = .35;
-                    gainNode.connect(delay)
-                    gainNode.connect(ctx.destination)
-                    delay.connect(ctx.destination)
+                    var delay2 = ctx.createDelay();
+                    delay.delayTime.value = 0.35;
+                    delay2.delayTime.value = 0.5;
+                    osc.connect(gainNode);
+                    gainNode.connect(ctx.destination);
+                    gainNode.connect(delay);
+                    gainNode.connect(delay2);
+                    delay.connect(gainNode);
+                    delay2.connect(gainNode);
+                    delay.connect(ctx.destination);
+                    delay2.connect(ctx.destination);        
                 }
                 gainNode.gain.value = 0.0;
                 gainNode.gain.setTargetAtTime(0.75, ctx.currentTime, 0.1);
